<resources>
    <string name="app_name">Git Pocket</string>
    <string name="login_screen_subHeading">Github Content in Your Phone</string>
    <string name="github_username_hint_text">Enter Github Username</string>
    <string name="cd_login_button">Proceed to Login</string>
    <string name="cd_menu">Menu</string>
    <string name="cd_home_bg">Man operating Laptop with a leaderboard behind</string>
    <string name="shared_preference_key">Git Pocket PF Key</string>
    <string name="sp_github_key">Github Username</string>
    <string name="invalid_user_text">Invalid User Name Entered</string>
    <string name="repoCount_text">%1d Repositories</string>
    <string name="followCount_text">%1d Followers\n%2d Following</string>
    <string name="forkCount_text">%1d Forks</string>
    <string name="sideBarMenu_open">Open</string>
    <string name="sideBarMenu_close">Close</string>
    <string name="logoutText">Logout</string>
</resources>