<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/login_screen_bg">
    
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/login_screen_text_heading"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/font_rubik_medium"
            android:layout_marginTop="96dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="148dp"
            android:fontFamily="@font/font_rubik_medium"
            android:text="@string/login_screen_subHeading"
            android:textColor="@color/login_screen_text_subheading"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/login_button_bg"
            android:layout_alignBottom="@id/button_login"
            android:layout_marginBottom="241dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/login_screen_edit_text_hint"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/github_username_hint_text"
            android:fontFamily="@font/font_rubik_medium"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:textColorHint="@color/login_screen_edit_text_hint"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"/>
        
        <ImageView
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_github"
            android:background="@drawable/login_button_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="376dp"
            android:elevation="10dp"
            android:contentDescription="@string/cd_login_button" />
    </RelativeLayout>
</ScrollView>