<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_homeDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Layout Starts Here -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_screen_bg"
        android:fitsSystemWindows="true"
        tools:context=".activities.HomeActivity">

        <ImageButton
            android:id="@+id/button_home_openSideBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/login_screen_bg"
            android:contentDescription="@string/cd_menu"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/app_name"
            android:textColor="@color/home_screen_text_heading"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_github_emoji"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="110dp"
            android:contentDescription="@string/cd_home_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_home_bg" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottom_sheet_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_github_emoji">

            <FrameLayout
                android:id="@+id/layout_home_screen_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_bottom_sheet"
                app:behavior_hideable="false"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <View
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_bottom_sheet_dragger" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/home_frag_container"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    app:defaultNavHost="true"
                    app:navGraph="@navigation/main_nav_graph" />
            </FrameLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Drawer Layout Starts Here -->
    <include
        android:id="@+id/layout_sideBar"
        layout="@layout/layout_sidebar_menu"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</androidx.drawerlayout.widget.DrawerLayout>